--- a/home.css
+++ b/home.css
@@ -9,18 +9,23 @@ body {
 
 .container {
     background-color: #ffffff;
-    max-width: 500px;
+    width: 80%;
     height: 90vh;
     margin: 40px auto;
     border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 4px 3px 5px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
 
 h1 {
     color: #62825D;
     font-size: 2em;
-    margin: 20px 0;
+    padding-top: 2.5em;
+}
+
+p {
+    font-size: 1.2em;
+    margin: 0 50px;
 }
 
 button {
@@ -28,6 +33,7 @@ button {
     padding: 10px;
     border: 2px solid #62825D;
     border-radius: 5px;
+    margin-top: 20px;
     cursor: pointer;
     font-size: 1em;
     background-color: #ffffff;
@@ -42,4 +48,9 @@ button a {
     transition: all 0.3s ease;
     background-color: #ffffff;
     color: #62825D;
+}
+
+.foto {
+    width: 100%;
+    height: 50%;
 }
