--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     margin: 40px auto;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 4px 4px 6px rgba(0, 0, 0, 0.1);
     text-align: left;
 }
 
